--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       - DATABASE_PATH=/data/muenzbox.db
     volumes:
-      - ./data:/data
+      - /volume1/docker/muenzbox/data:/data
     networks:
       - muenzbox
     healthcheck:
